--- a/第九章-前端开发/2 HTML/01-index.html
+++ b/第九章-前端开发/2 HTML/01-index.html
@@ -9,7 +9,9 @@
 <html>
     <head>
         <!--meta声明头部的元信息,对文档规定编码格式-->
-        <meta charset="utf-8">
+        <!--<meta charset="utf-8">-->
+        <!--meta是单闭合，还可以像下面这样改写-->
+        <meta charset="utf-8"/>
         <!--包含头部的信息，head是一个容器，包含style、title、meta、script、link标签等-->
     </head>
     <body>
