--- a/第九章-前端开发/4 javascript学习/jsBom/01-BOM输出.html
+++ b/第九章-前端开发/4 javascript学习/jsBom/01-BOM输出.html
@@ -22,7 +22,7 @@
 
     // 3.prompt('message',defaultValue)
     var pro = prompt('路飞学城',443);
-    console.log(pro);
+    console.log(pro);  // 显示输入在对话框的内容
 
     // 4.confirm() :如果点击确定返回true，如果点击取消，就返回false
     var m = confirm("学习BOM");
@@ -33,7 +33,7 @@
         print();   // 直接调用打印机
     }
     function findLuffy() {
-        var m2 = confirm("学习BOM");
+        var m2 = confirm("学习");
         find(m2);
     }
 </script>
