--- a/第九章-前端开发/4 javascript学习/jsBom/03-其他的BOM对象和方法.html
+++ b/第九章-前端开发/4 javascript学习/jsBom/03-其他的BOM对象和方法.html
@@ -13,9 +13,10 @@
     // 返回浏览器的用户设备信息
     console.log(window.navigator.userAgent);
 
-    // console.log(window.location);
+    // 获取用户本地信息
+    console.log(window.location);
     // 经常使用的一个方法————href，直接打开网址
-    // window.location.href = 'https://www.luffycity.com';
+    window.location.href = 'https://www.luffycity.com';
 
     // 全局刷新 ====> 尽量少用这种方法  对应局部刷新
     setTimeout(function () {
